# TradingSystemPro

./: .gitignore  LICENSE  README.md  dashboard.py  pyproject.toml  requirements.txt  setup.py
docs/: ml_integration_guide.md  trailing_stop_guide.md  walk_forward_analysis.md
examples/: README_optimization.md  advanced_features.py  basic_usage.py  check_fix.py  debug_trades.py  optimize_parameters.py  simple_debug.py  simple_test.py  test_adx.py  test_ml_integration.py  test_optimization.py  test_optimizer.py  test_trailing_stop.py  test_walk_forward.py  walk_forward_analysis.py
notebooks/: TradingSystemPro_Demo.ipynb  TradingSystemPro_Demo_Clean.ipynb
src/: __init__.py  config.py  extensions.py  trading_system.py
tests/: test_trading_system.py
