[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingsystem-pro"
version = "1.0.0"
description = "高度な株式取引分析・シミュレーションシステム"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TradingSystem Pro Team", email = "your-email@example.com"},
]
keywords = ["trading", "stock analysis", "technical analysis", "machine learning", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "mplfinance>=0.12.0",
    "pandas-ta>=0.3.0",
    "pandas-datareader>=0.10.0",
    "scipy>=1.9.0",
    "statsmodels>=0.13.0",
    "tqdm>=4.64.0",
    "python-dotenv>=0.20.0",
    "loguru>=0.6.0",
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "concurrent-futures>=3.1.1",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.1.0",
    "xgboost>=1.6.0",
    "joblib>=1.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.7.0",
    "plotly>=5.10.0",
]

[project.scripts]
trading-system = "src.trading_system:main"

[project.urls]
"Bug Reports" = "https://github.com/your-username/TradingSystemPro/issues"
"Source" = "https://github.com/your-username/TradingSystemPro"
"Documentation" = "https://github.com/your-username/TradingSystemPro/wiki"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
